--- a/style.css
+++ b/style.css
@@ -44,7 +44,11 @@ body {
     margin: 10px 50px;
     outline: none;
     font-size: 16px;
-    color: rgba(100, 100, 100);
+    color: rgb(0, 0, 0);
+}
+
+.search-bar-container:hover {
+    background-color: #ffffff;
 }
 
 .active.search-bar-container{
